# activity_tracker

./: .gitignore  Cargo.toml
docs/: index.html
docs/styles/: index.css  index.css.map
service_worker/: Cargo.toml  Makefile.toml  index.html
service_worker/src/: lib.rs
src/: app.rs  lib.rs  msg_bus.rs
src/elements/: mod.rs
src/elements/activity/: model.rs  view.rs
src/elements/dashboard/: model.rs  view.rs
src/elements/dialogue/: model.rs  view.rs
src/elements/notification/: model.rs  view.rs
src/pages/: mod.rs
src/pages/home/: model.rs  view.rs
static/: index.scss  sw.js
