[package]
name = "activity_tracker"
version = "0.1.0"
authors = ["Raymond Yeh <extraymond@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
afterglow = { path = "/home/extraymond/git/afterglow/afterglow" }
afterglow-router = { path = "/home/extraymond/git/afterglow/afterglow-router/" }
log = "0.4.8"
femme = "1.3.0"
console_error_panic_hook = { version = "0.1.6", optional = true }
wee_alloc = { version = "0.4.5", optional = true }
cfg-if = "0.1.10"
chrono = { version = "0.4.11", features = ["wasmbind", "js-sys"] }
futures-timer = { version = "3.0.2", features = ["wasm-bindgen"]}
strum = "0.18.0"
strum_macros = "0.18.0"
futures = "0.3.4"
web-sys = { vesion = "0.3.36", features = ["Navigator", "ServiceWorkerContainer", "ServiceWorkerGlobalScope", "ServiceWorkerRegistration", "Notification", "NotificationPermission"]}
instant = { vesrion = "0.1.2", features = ["wasm-bindgen"]}
async_executors = "0.2.0"

[lib]
crate-type = ["cdylib"]

[features]
default = ["console_error_panic_hook"]
release = ["console_error_panic_hook", "wee_alloc"]

[profile.release]
lto = true
