[package]
name = "service_worker"
version = "0.1.0"
authors = ["Raymond Yeh <extraymond@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.59"
web-sys = { vesion = "0.3.36", features = ["Navigator", "ServiceWorkerContainer", "ServiceWorkerGlobalScope", "ServiceWorkerRegistration", "ExtendableEvent", "FetchEvent", "Request", "Response", "CacheStorage", "Cache"]}
wasm-bindgen-futures = "0.4.9"
futures = "0.3.4"
log = "0.4.8"
femme = "1.3.0"
js-sys = "0.3.36"
gloo = "0.2.1"
serde-wasm-bindgen = "0.1.3"


[lib]
crate-type = ["cdylib", "rlib"]
